# django-allauth-practice

./: .gitignore  README.md  manage.py  pyproject.toml
django_allauth_practice/: asgi.py  settings.py  urls.py  wsgi.py
login/: views.py
login/templates/: base.html
